Add task view controller

--- a/MyTouch/zh-Hant.lproj/Localizable.strings
+++ b/MyTouch/zh-Hant.lproj/Localizable.strings
@@ -9,3 +9,7 @@
 "Exam" = "測驗";
 "Exam Description" = "岸邊信精一動也於時讀山！切去都；數大小參構為理大開年去歡代天老媽政治場太算畫而……過少廣喜的來了笑林壓想；可化光區：害雄媽不起相速歡心，或去出留自了輕更自的地吃大真，最考山也的們名望注難原知爾到元勢你下國：和名水，為間育河輕開才港一去以調只不相離學他，成童法訴值而全；效改類國光會小的食可功？備你安業毒現有雙樣廣其，盡現帶是書，個具我了就金今致著賽前們，回來資，定下去精經現點在了成造我決作地舉在長回外、對明人家你麼地土談來……進坐運到小例旅，孩著體以化來品法構。起國中明企談行才不樹門認來區怎效……我在前他約票，金生議，學出戰賽身子石在長是？國醫負師車平！留選切手關去經；院公這！";
 "Start Exam" = "開始測驗";
+
+"Tap Task Title" = "點擊測驗";
+"Tap Task Description" = "請點擊螢幕上出現的藍色方塊";
+"Very Good" = "非常好！";
