--- a/MyTouch/en.lproj/Localizable.strings
+++ b/MyTouch/en.lproj/Localizable.strings
@@ -9,3 +9,7 @@
 "Exam" = "Exam";
 "Exam Description" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
 "Start Exam" = "Start Exam";
+
+"Tap Task Title" = "Tap Task";
+"Tap Task Description" = "Please tap on the blue square on the screen.";
+"Very Good" = "Verry Good!";
