Add many things

--- a/MyTouch/en.lproj/Localizable.strings
+++ b/MyTouch/en.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 "Tap Task Title" = "Tap Task";
 "Tap Task Description" = "Please tap on the blue square on the screen.";
 "Very Good" = "Verry Good!";
+"Next Trial" = "Next";
+"Tap Task End Title" = "Tap Task Finished";
