--- a/MyTouch/zh-Hant.lproj/Localizable.strings
+++ b/MyTouch/zh-Hant.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 "Tap Task Title" = "點擊測驗";
 "Tap Task Description" = "請點擊螢幕上出現的藍色方塊";
 "Very Good" = "非常好！";
+"Next Trial" = "下一題";
+"Tap Task End Title" = "點擊測驗結束";
