--- a/MyTouch/zh-Hant.lproj/Localizable.strings
+++ b/MyTouch/zh-Hant.lproj/Localizable.strings
@@ -15,3 +15,7 @@
 "Very Good" = "非常好！";
 "Next Trial" = "下一題";
 "Tap Task End Title" = "點擊測驗結束";
+
+"TASK_INSTRUCTION_TITLE" = "測驗說明";
+"TASK_INSTRUCTION" = "岸邊信精一動也於時讀山！切去都；數大小參構為理大開年去歡代天老媽政治場太算畫而……過少廣喜的來了笑林壓想。";
+"NEXT_BUTTON" = "下一步";
