--- a/MyTouch/en.lproj/Localizable.strings
+++ b/MyTouch/en.lproj/Localizable.strings
@@ -18,4 +18,6 @@
 
 "TASK_INSTRUCTION_TITLE" = "Instruction";
 "TASK_INSTRUCTION" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";
+
 "NEXT_BUTTON" = "Next";
+"CANCEL_TASK_BUTTON" = "Cancel";
