--- a/MyTouch/zh-Hant.lproj/Localizable.strings
+++ b/MyTouch/zh-Hant.lproj/Localizable.strings
@@ -134,5 +134,10 @@
 "SETTING_INSTRUCTION_STEP_3" = "3. 點擊「觸控調節」選項。";
 "SETTING_INSTRUCTION_STEP_4" = "4. 根據測驗結果調整各項設定值。";
 
+"SETTING_INSTRUCTION_IMAGE_1" = "image_settings_general_en";
+"SETTING_INSTRUCTION_IMAGE_2" = "image_settings_accessibility_en";
+"SETTING_INSTRUCTION_IMAGE_3" = "image_settings_accommodations_en";
+"SETTING_INSTRUCTION_IMAGE_4" = "image_settings_configs_en";
+
 "LOCAL_SESSIONS_NOTIFICATION_TITLE" = "您有測驗資料還尚未上傳";
 "LOCAL_SESSIONS_NOTIFICATION_BODY" = "資料上傳到雲端伺服器之前不會被分析處理。";
